<resources>
    <string name="app_name">Calculadora</string>
    <string name="_6">6</string>
    <string name="ce">ce</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="opera_o">Operação</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="x">x</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="div">÷</string>
    <string name="del">Del</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="resultado">Resultado</string>
    <string name="local_do_primeiro_operando">Primeiro Operando</string>
    <string name="local_do_segundo_operando">Segundo Operando</string>
</resources>
